--- a/homepage/static/ngTemplates/app.homepage.about.html
+++ b/homepage/static/ngTemplates/app.homepage.about.html
@@ -1,114 +1,96 @@
-<div class="row" style="margin:0px;background: url('/static/images/about-header.jpg');background-repeat: no-repeat;background-size: cover;min-height:400px;padding:140px 0px 0px 0px;background-position:center;"></div>
-<div class="row" style="margin:0px;padding:30px;color:#022750;font-family:sans-serif;">
-  <div class="col-md-12 text-center col-xs-12" style="">
-    <h1 style="font-size:50px;font-weight:400;">About us</h1>
-  </div>
-  <div class="col-md-8 col-md-offset-2 col-sm-12">
-    <div class="col-md-6 col-xs-12" style="text-align:left;font-size:16px;font-weight:300;">
-      EpsilonAI is the world’s leading experimentation platform, enabling businesses to deliver continuous experimentation and personalization across websites,
-      mobile apps and connected devices. EpsilonAI enables businesses to experiment deeply
-      into their technology stack and broadly across the entire customer experience.<br>
-      The platform’s ease of use and speed of deployment empower organizations to create and run bold experiments that help them make data-driven decisions and grow faster.
-      To date, marketers, developers and product managers have delivered over 700 billion experiences tailored to the needs of their customers.
-    </div>
-    <div class="col-md-6 col-xs-12 text-center" style="text-align:left;font-size:16px;font-weight:300;">
-      At EpsilonAI, continuous experimentation isn’t a product, it’s our DNA. It’s why we never stop trying new things and pushing ourselves to deliver for you. The way we see it,
-      you’re the expert on your customers and your business. It’s our job to help you stay that way, getting sharper every day and turning even the most commonplace interactions into opportunities to learn and grow.
-      <br>
-      Because the most successful businesses aren’t the ones with all the answers. They’re the ones that keep asking the big questions.
-    </div>
-  </div>
-</div>
-<div class="row" style="margin:0px;background: url('/static/images/about-hero.jpg');background-repeat: no-repeat;background-size: cover;min-height:500px;padding:140px 0px 0px 0px;background-position:center;">
-</div>
-<div class="row owl-theme" style="margin:0px;">
-  <div class="col-md-12 text-center" style="padding:30px;">
-    <h3 style="font-size:30px;font-weight:400;">The world’s leading brands trust EpsilonAI to power their customer experiences.</h3>
-  </div>
-  <div class=""ng-controller="controller.index">
-  <div class="col-md-12">
-    <div class="col-md-10 col-md-offset-1 text-center">
-      <!-- <div class="col-md-3  col-sm-12" style="padding:30px;">
-        <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
-      </div>
-      <div class="col-md-3  col-sm-12" style="padding:30px;">
-        <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
-      </div>
-      <div class="col-md-3  col-sm-12" style="padding:30px;">
-        <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
-      </div>
-      <div class="col-md-3  col-sm-12" style="padding:30px;">
-        <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
-      </div> -->
-      <div class="row" style="margin:0px;">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="col-md-12">
-            <ng-owl-carousel class="owl-theme" owl-items="brands" owl-properties="properties" owl-ready="ready($api)">
-              <div ng-repeat="b in brands" style="padding:10px;">
-                <div class="anim-in-out anim-zoom-out">
-                  <div style="padding:20px;">
-                    <img class="img" ng-src="{{b.dp}}"/>
-                  </div>
-                </div>
-              </div>
-            </ng-owl-carousel>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-8 col-md-offset-2 text-center">
-      <!-- <div class="col-md-4  col-sm-12" style="padding:30px;">
-        <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
-      </div>
-      <div class="col-md-4  col-sm-12" style="padding:30px;">
-        <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
-      </div>
-      <div class="col-md-4  col-sm-12" style="padding:30px;">
-        <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
-      </div> -->
-      <div class="row" style="margin:0px;">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="col-md-12">
-            <ng-owl-carousel class="owl-theme" owl-items="brands" owl-properties="properties" owl-ready="ready($api)">
-              <div ng-repeat="b in brands" style="padding:10px;">
-                <div class="anim-zoom-out anim-in-out">
-                  <div style="padding:20px;">
-                    <img class="img" ng-src="{{b.dp}}" />
-                  </div>
-                </div>
-              </div>
-            </ng-owl-carousel>
-          </div>
-        </div>
-      </div>
-    </div>
-      <!-- <div class="row" style="margin:0px;">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="col-md-12">
-            <ng-owl-carousel class="owl-theme" owl-items="brands" owl-properties="properties" owl-ready="ready($api)">
-              <div ng-repeat="b in brands" style="padding:10px;">
-                <div class="anim-in-out anim-zoom-out">
-                  <div style="padding:20px;">
-                    <img class="img" ng-src="{{b.dp}}" />
-                  </div>
-                </div>
-              </div>
-            </ng-owl-carousel>
-          </div>
-        </div>
-      </div> -->
-    </div>
+<br><br><br>
+
+<div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)),url('static/images/24tut/diss.jpg');background-size:100%;">
+  <div class="col-md-12" style="padding-top:20%;padding-left:8%;">
+    <span style="color:#fff;font-size:4em;font-weight:bolder;">About</span><br>
+    <span class="u_line"></span>
+    <h5 style="color:#fff;">Home / About</h5>
   </div>
 </div>
 
-<div class="row" style="margin:0px;">
-  <div class="col-md-12 text-center" style="padding:30px;font-size:20px;font-weight:400;">
-    <h1 style="font-size:40px;font-weight:600;">We're hiring!</h1>
-    <p>&emsp;</p>
-    <p>Our happy customer base is growing and so are we. We are actively looking for spectacular people to join</p>
-    <p> our team.</p>
-  </div>
-  <div class="text-center" style="padding-bottom:20px;">
-    <a class="btn btn-primary btn-rounded">VIEW JOB OPENINGS</a>
+<div class="container-fluid no_padding" style="min-height:45vh;margin:30px auto;background-image:url('static/images/24tut/part.png');background-size:contain;background-position:right;background-repeat:no-repeat;">
+  <div class="col-md-9 col-md-offset-1">
+    <div class="col-md-4 col-md-offset-1">
+      <span class="heading_small">EXPLORE THE WIDE RANGE OF OPTIONS</span>
+      <h2 class="heading_medium">The Best Course Design for you crafted by professionals</h2>
+      <span class="u_line"></span>
+      <div class="min_padd">
+        <span class="heading_small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ea commodo consequat.</span>
+        <div class="min_padd">
+          <h4 class=""> <b>JEAN DEAN</b> </h4>
+          <h5 class="text-muted">-eLearny Founder</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 col-md-offset-1">
+      <div class="col-md-6">
+        <div class="container-fluid hero_card">
+          <div class="hero_img" style="background-image:url('static/images/24tut/ilearn.jpg');min-height:20vh;background-size:100%;background-repeat:no-repeat;"></div>
+          <div class="col-md-12">
+            <h1 class="pro_head">Interactive Learning</h1>
+            <h4 class="heading_small" style="line-height:2;">Mistaken idea of denouncing pleasure and praising pain was born and will give.</h4>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="container-fluid hero_card">
+          <div class="hero_img" style="background-image:url('static/images/24tut/hands.jpg');min-height:20vh;background-size:100%;background-repeat:no-repeat;"></div>
+          <div class="col-md-12">
+            <h1 class="pro_head">Exclusive Support</h1>
+            <h4 class="heading_small" style="line-height:2;">Explain to you how all this mistaken idea of denouncing pleaure and praising pain was born.</h4>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+<div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.89), rgba(32, 32, 32, 0.84)),url('static/images/24tut/meeting.png');background-size:100%;">
+  <div class="col-md-12 text-center" style="padding-top:10rem;">
+    <h1 class="heading_big" style="color:#fff;">Our Process</h1>
+    <h5 class="heading_small" style="color:#fff;">SIMPLE & EFFICIENT</h5>
+  </div>
+  <div class="container-fluid">
+    <div class="container">
+      <div class="dash cent">
+        <img src="/static/images/24tut/bulb.png" class="pro_img" width="40%">
+        <img src="/static/images/24tut/file.png" class="pro_over_img" width="40%">
+        <div class="pro_title text-center">
+          <span class="pro_num">01</span> <span class="pro_head" style="color:#fff">Plan</span>
+          <img src="/static/images/24tut/clip.png" class="pro_hov">
+        </div>
+      </div>
+      <div class="dash cent">
+        <img src="/static/images/24tut/agenda.png" class="pro_img" width="40%">
+        <img src="/static/images/24tut/file.png" class="pro_over_img" width="40%">
+        <div class="pro_title text-center">
+          <span class="pro_num">02</span> <span class="pro_head" style="color:#fff">Study</span>
+          <img src="/static/images/24tut/clip.png" class="pro_hov">
+        </div>
+      </div>
+      <div class="dash cent">
+        <img src="/static/images/24tut/chemistry.png" class="pro_img" width="40%">
+        <img src="/static/images/24tut/file.png" class="pro_over_img" width="40%">
+        <div class="pro_title text-center">
+          <span class="pro_num">03</span> <span class="pro_head" style="color:#fff">Experiment</span>
+          <img src="/static/images/24tut/clip.png" class="pro_hov">
+        </div>
+      </div>
+      <div class="dash cent">
+        <img src="/static/images/24tut/books.png" class="pro_img" width="40%">
+        <img src="/static/images/24tut/file.png" class="pro_over_img" width="40%">
+        <div class="pro_title text-center">
+          <span class="pro_num">04</span> <span class="pro_head" style="color:#fff">Score</span>
+          <img src="/static/images/24tut/clip.png" class="pro_hov">
+        </div>
+      </div>
+      <div class="dashlast cent centlast">
+        <img src="/static/images/24tut/file.png" class="pro_img" width="40%">
+        <img src="/static/images/24tut/file.png" class="pro_over_img" width="40%">
+        <div class="pro_title">
+          <span class="pro_num">05</span> <span class="pro_head" style="color:#fff">Get Certified</span>
+          <img src="/static/images/24tut/clip.png" class="pro_hov">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
