--- a/homepage/static/ngTemplates/app.homepage.home.html
+++ b/homepage/static/ngTemplates/app.homepage.home.html
@@ -1,5 +1,5 @@
 <br><br><br>
-<!-- <div class="container-fluid" style="background-image:url('/static/images/24tut/head.png');min-height:60vh;background-size:100% 100%;background-repeat:no-repeat;">
+<div class="container-fluid" style="background-image:url('/static/images/24tut/head.png');min-height:60vh;background-size:100% 100%;background-repeat:no-repeat;">
   <div class="col-md-4 col-md-offset-2" style="color:#fff;padding-top:13rem;">
     <h1 style="font-size:4em;font-weight:bold;"> Learn Anything </h1>
     <h3 style="font-size:2.4em;font-weight:lighter;font-family:sans-serif;line-height:1.2;">Get Access for Award Winning Online Courses</h3>
@@ -394,7 +394,7 @@
     </div>
   </div>
 </div>
- -->
+
 
 <div class="container-fluid no_padding" style="min-height:20vh;margin:20px auto;">
   <div class="col-md-12 no_padding">
@@ -483,94 +483,3 @@
     </div>
   </div>
 </div>
-
-
-<div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)),url('static/images/24tut/diss.jpg');background-size:100%;">
-  <div class="col-md-12" style="padding-top:20%;padding-left:8%;">
-    <span style="color:#fff;font-size:4em;font-weight:bolder;">About</span><br>
-    <span class="u_line"></span>
-    <h5 style="color:#fff;">Home / About</h5>
-  </div>
-</div>
-
-<div class="container-fluid no_padding" style="min-height:45vh;margin:30px auto;background-image:url('static/images/24tut/part.png');background-size:contain;background-position:right;background-repeat:no-repeat;">
-  <div class="col-md-9 col-md-offset-1">
-    <div class="col-md-4 col-md-offset-1">
-      <span class="heading_small">EXPLORE THE WIDE RANGE OF OPTIONS</span>
-      <h2 class="heading_medium">The Best Course Design for you crafted by professionals</h2>
-      <span class="u_line"></span>
-      <div class="min_padd">
-        <span class="heading_small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ea commodo consequat.</span>
-        <div class="min_padd">
-          <h4 class=""> <b>JEAN DEAN</b> </h4>
-          <h5 class="text-muted">-eLearny Founder</h5>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-md-offset-1">
-      <div class="col-md-6">
-        <div class="container-fluid hero_card">
-          <div class="hero_img" style="background-image:url('static/images/24tut/ilearn.jpg');min-height:20vh;background-size:100%;background-repeat:no-repeat;"></div>
-          <div class="col-md-12">
-            <h1 class="pro_head">Interactive Learning</h1>
-            <h4 class="heading_small" style="line-height:2;">Mistaken idea of denouncing pleasure and praising pain was born and will give.</h4>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="container-fluid hero_card">
-          <div class="hero_img" style="background-image:url('static/images/24tut/hands.jpg');min-height:20vh;background-size:100%;background-repeat:no-repeat;"></div>
-          <div class="col-md-12">
-            <h1 class="pro_head">Exclusive Support</h1>
-            <h4 class="heading_small" style="line-height:2;">Explain to you how all this mistaken idea of denouncing pleaure and praising pain was born.</h4>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.89), rgba(32, 32, 32, 0.84)),url('static/images/24tut/meeting.png');background-size:100%;">
-  <div class="col-md-12 text-center" style="padding-top:10rem;">
-    <h1 class="heading_big" style="color:#fff;">Our Process</h1>
-    <h5 class="heading_small" style="color:#fff;">SIMPLE & EFFICIENT</h5>
-  </div>
-  <div class="container-fluid">
-    <div class="container">
-      <div class="dash cent">
-        <img src="/static/images/24tut/bulb.png" class="pro_img" width="40%">
-        <div class="pro_title text-center">
-          <span class="pro_num">01</span> <span class="pro_head" style="color:#fff">Plan</span>
-          <img src="/static/images/24tut/clip.png" class="pro_hov">
-        </div>
-      </div>
-      <div class="dash cent">
-        <img src="/static/images/24tut/agenda.png" class="pro_img" width="40%">
-        <div class="pro_title text-center">
-          <span class="pro_num">02</span> <span class="pro_head" style="color:#fff">Study</span>
-          <img src="/static/images/24tut/clip.png" class="pro_hov">
-        </div>
-      </div>
-      <div class="dash cent">
-        <img src="/static/images/24tut/chemistry.png" class="pro_img" width="40%">
-        <div class="pro_title text-center">
-          <span class="pro_num">03</span> <span class="pro_head" style="color:#fff">Experiment</span>
-          <img src="/static/images/24tut/clip.png" class="pro_hov">
-        </div>
-      </div>
-      <div class="dash cent">
-        <img src="/static/images/24tut/books.png" class="pro_img" width="40%">
-        <div class="pro_title text-center">
-          <span class="pro_num">04</span> <span class="pro_head" style="color:#fff">Score</span>
-          <img src="/static/images/24tut/clip.png" class="pro_hov">
-        </div>
-      </div>
-      <div class="dashlast cent centlast">
-        <img src="/static/images/24tut/file.png" class="pro_img" width="40%">
-        <div class="pro_title">
-          <span class="pro_num">05</span> <span class="pro_head" style="color:#fff">Get Certified</span>
-          <img src="/static/images/24tut/clip.png" class="pro_hov">
-        </div>
-      </div>
-    </div>
-  </div>
-  <div>
