--- a/homepage/static/ngTemplates/app.homepage.about.html
+++ b/homepage/static/ngTemplates/app.homepage.about.html
@@ -1,5 +1,4 @@
-<br><br><br>
-
+<br>
 <div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)),url('static/images/24tut/diss.jpg');background-size:100%;">
   <div class="col-md-12" style="padding-top:20%;padding-left:8%;">
     <span style="color:#fff;font-size:4em;font-weight:bolder;">About</span><br>
@@ -44,7 +43,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.89), rgba(32, 32, 32, 0.84)),url('static/images/24tut/meeting.png');background-size:100%;">
+<div class="container-fluid no_padding" style="min-height:60vh;background-image:linear-gradient(rgba(36, 32, 32, 0.89), rgba(32, 32, 32, 0.84)),url('static/images/24tut/meeting.png');background-size:100%;">
   <div class="col-md-12 text-center" style="padding-top:10rem;">
     <h1 class="heading_big" style="color:#fff;">Our Process</h1>
     <h5 class="heading_small" style="color:#fff;">SIMPLE & EFFICIENT</h5>
@@ -57,6 +56,7 @@
         <div class="pro_title text-center">
           <span class="pro_num">01</span> <span class="pro_head" style="color:#fff">Plan</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
+          <span class="pro_descrp">a detailed proposal for doing or achieving something with dedication.</span>
         </div>
       </div>
       <div class="dash cent">
@@ -65,6 +65,7 @@
         <div class="pro_title text-center">
           <span class="pro_num">02</span> <span class="pro_head" style="color:#fff">Study</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
+          <span class="pro_descrp">learn about a subject, especially in an educational course or by reading books</span>
         </div>
       </div>
       <div class="dash cent">
@@ -73,6 +74,7 @@
         <div class="pro_title text-center">
           <span class="pro_num">03</span> <span class="pro_head" style="color:#fff">Experiment</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
+          <span class="pro_descrp">a procedure carried out to support, refute, or validate a hypothesis.</span>
         </div>
       </div>
       <div class="dash cent">
@@ -81,6 +83,7 @@
         <div class="pro_title text-center">
           <span class="pro_num">04</span> <span class="pro_head" style="color:#fff">Score</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
+          <span class="pro_descrp">the number of points, goals, runs, etc. achieved in a game or by a team or an individual.</span>
         </div>
       </div>
       <div class="dashlast cent centlast">
@@ -89,8 +92,86 @@
         <div class="pro_title">
           <span class="pro_num">05</span> <span class="pro_head" style="color:#fff">Get Certified</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
+          <span class="pro_descrp">officially recognize as possessing certain qualifications or meeting certain standards.</span>
         </div>
       </div>
     </div>
   </div>
-  <div>
+</div>
+
+<div class="container-fluid" style="min-height:60vh;margin-top:0px;padding-top: 0px;position:relative;">
+  <img src="/static/images/24tut/lr.png" class="bg on_left" width="9.5%" height="80%">
+  <img src="/static/images/24tut/rc.png" class="bg on_right" width="7%">
+  <div class="col-md-10 col-md-offset-1" style="padding-top:6rem;">
+    <div class="col-md-5 col-md-offset-1 min_padd">
+      <h2 class="heading_medium">Promoting Good Education since the Very beginning</h2>
+      <span class="u_line"></span>
+      <div class="min_padd">
+        <span class="heading_small" style="line-height:1.7;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          iusmod tempor incididunt ut labore et dolore magna aliqua quis nostrud exercitation.</span>
+      </div>
+      <div class="min_padd">
+        <h3> <b>Our Partners</b> </h3>
+        <div class="row">
+          <img src="/static/images/24tut/partner1.svg" width="25%" class="partners">
+          <img src="/static/images/24tut/partner2.png" width="25%" class="partners">
+          <img src="/static/images/24tut/partner3.png" width="25%" class="partners">
+        </div>
+      </div>
+    </div>
+    <div class="col-md-5 col-md-offset-1">
+
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid" style="min-height:60vh;">
+  <div class="col-md-12 min_padd text-center">
+    <h1 class="heading_big">eLearny's Testimonials</h1>
+    <h5 class="heading_small">WHAT STUDENTS THINK OF US</h5>
+  </div>
+  <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-4">
+      <div class="container-fluid tell_card">
+        <img src="/static/images/24tut/tell1.jpeg" class="tell_abt">
+        <img src="/static/images/24tut/clip.png" class="tell_abt_overlay">
+        <div class="text-center tell_c_info">
+          <h2 class="pro_head">Lauren Ralph</h2>
+          <h5 class="text-muted">eLearny Student</h5>
+          <div class="" style="padding:10px 30px;line-height:2;">
+            <span class="heading_small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  sed do eiusmod.</span>
+            <img src="/static/images/24tut/qleft.png" class="quotes_img">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="container-fluid tell_card">
+        <img src="/static/images/24tut/tell2.jpeg" class="tell_abt">
+        <img src="/static/images/24tut/clip.png" class="tell_abt_overlay">
+        <div class="text-center  tell_c_info">
+          <h2 class="pro_head">Stan Lee</h2>
+          <h5 class="text-muted">Music Student</h5>
+          <div class="" style="padding:10px 30px;line-height:2;">
+            <span class="heading_small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod sed do eiusmod.</span>
+            <img src="/static/images/24tut/qleft.png" class="quotes_img">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="container-fluid tell_card">
+        <img src="/static/images/24tut/tell4.jpg" class="tell_abt">
+        <img src="/static/images/24tut/clip.png" class="tell_abt_overlay">
+        <div class="text-center tell_c_info">
+          <h2 class="pro_head">Joseph Irvin</h2>
+          <h5 class="text-muted">Programmer</h5>
+          <div class="" style="padding:10px 30px;line-height:2;">
+            <span class="heading_small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod  sed do eiusmod.</span>
+            <img src="/static/images/24tut/qleft.png" class="quotes_img">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
