--- a/homepage/static/ngTemplates/app.homepage.home.html
+++ b/homepage/static/ngTemplates/app.homepage.home.html
@@ -453,7 +453,7 @@
 </div>
 
 
-<div class="container-fluid no_padding" style="min-height:40vh;margin:20px auto;position:relative;">
+<!-- <div class="container-fluid no_padding" style="min-height:40vh;margin:20px auto;position:relative;">
   <img src="/static/images/24tut/7.png" class="bg on_left" width="10%">
   <img src="/static/images/24tut/6.png" class="bg on_right" width="10%">
 
@@ -464,9 +464,9 @@
       <button type="button" class=" btn_gradient">Join a Course Now</button>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="container-fluid no_padding" style="min-height:20vh;margin:20px auto;">
+<!-- <div class="container-fluid no_padding" style="min-height:20vh;margin:20px auto;">
   <div class="col-md-12 no_padding">
     <div class="col-md-6 text-center" style="background-color:#02EBA3;color:#fff;min-height:13vh;padding-top:40px;">
       <span style="color: #fff;font-size: 1.4em;font-weight:bold;">Get hands on the <a href="#" class="linkline">Great Courses</a> you like </span><br>
@@ -482,4 +482,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
