--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -1,158 +1,170 @@
-<div class=" bg-white" style="min-height:93vh;">
+<div class=" bg-white" style="min-height:93vh;overflow:hidden">
 
   <breadcrumb></breadcrumb>
 
-  <div class="container-fluid" style="padding:20px">
-    <div class="col-md-2">
-      <div class="form-group">
-        <label><b> Select Date </b></label>
-        <div class="input-group">
-          <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="fa fa-calendar"></i></button>
-          </span>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="form-group">
-        <label><b> Visitor Email </b></label>
-        <input type="email" class="form-control" placeholder="User E-mail..." ng-model="form.email">
-      </div>
-    </div>
-    <div class="col-md-1" style="padding-top:23px">
-      <div class="btn-group-vertical">
-        <button type="button" class="btn btn-primary" ng-click="filterData()">
-          <strong>Filter</strong>
-        </button>
-        <!-- <button type="button" class="btn btn-default" ng-click="download()" ng-if="reviewData.length>0">
-          Download <i class="fa fa-download"></i>
-        </button> -->
-      </div>
-      <!-- <div class="btn btn-primary btn-block" ng-click="filterData()">
-        <strong>Filter</strong>
-      </div> -->
-    </div>
-    <div class="col-md-1" style="padding-top:23px">
-      <button type="button" class="btn btn-default" ng-click="setMyView()" ng-if="reviewData.length>0">
-         <i ng-if="!isTableView"class="fa fa-table"  aria-hidden="true"></i>
-         <i ng-if="isTableView" class="fa fa-address-card-o" aria-hidden="true"></i>
-      </button>
-    </div>
-  </div>
-  <uib-tabset>
-    <uib-tab active="searchTabActive">
-      <uib-tab-heading>
-        Browse
-        <i class="fa fa-list-ul"></i>
-      </uib-tab-heading>
-      <!-- <div class="card" style="min-height:65vh;" > -->
-        <div class="row" style="margin:15px;" >
-          <div style="position: absolute;top:400px;left:35%;" ng-if="loadingData">
-            <img src="https://media1.tenor.com/images/db85ba00c6073b451a8f05156a66524e/tenor.gif?itemid=9856796" alt="">
-          </div>
-          <div ng-if="!isTableView" class="col-md-4" ng-repeat="r in reviewData">
-            <div class="row" style="margin-bottom:30px; margin-right:15px;">
-                <div class="card" style="margin-bottom:-2px; border-radius:4px 4px 0px 0px; padding:15px;">
-                    <div class="row" style="padding:0px 10px; min-height:130px;">
-                      <!-- {{r[0]}} -->
-                      <div class="col-md-8">
-                        <h6>Agent Name : {{r[0].user_id | getName}}</h6>
-                        <h6>UID : {{r[0].uid}}</h6>
-                        <h6>Date : {{r[0].created | date : "dd-MMM-yyyy"}}</h6>
-                        <h6 ng-if="r[0].email">Visitor's Email : {{r[0].email}}</h6>
-                        <h6 ng-if="r[0].chatDuration!=0">Chat Duration : {{r[0].chatDuration}}</h6>
-                      </div>
+  <div class="row container-fluid" style="margin-top:-15px">
+    <div class="col-sm-12">
+      <uib-tabset>
+        <uib-tab active="searchTabActive">
+          <uib-tab-heading>
+            Browse
+            <i class="fa fa-list-ul"></i>
+          </uib-tab-heading>
+          <!-- <div class="card" style="min-height:65vh;" > -->
+            <div class="row" >
+              <div class="col-md-9" style="margin-top:15px;" >
+                <div style="text-align:center" ng-if="loadingData">
+                  <img src="https://media1.tenor.com/images/db85ba00c6073b451a8f05156a66524e/tenor.gif?itemid=9856796" alt="">
+                </div>
+                <div ng-if="!isTableView" class="col-md-4" ng-repeat="r in reviewData">
+                  <div class="row" style="margin-bottom:30px; margin-right:15px;">
+                      <div class="card" style="margin-bottom:-2px; border-radius:4px 4px 0px 0px; padding:15px;">
+                          <div class="row" style="padding:0px 10px; min-height:130px;">
+                            <!-- {{r[0]}} -->
+                            <div class="col-md-8">
+                              <h6>Agent Name : {{r[0].user_id | getName}}</h6>
+                              <h6>UID : {{r[0].uid}}</h6>
+                              <h6>Date : {{r[0].created | date : "dd-MMM-yyyy"}}</h6>
+                              <h6 ng-if="r[0].email">Visitor's Email : {{r[0].email}}</h6>
+                              <h6 ng-if="r[0].chatDuration!=0">Chat Duration : {{r[0].chatDuration}}</h6>
+                            </div>
 
-                      <div class="col-md-4">
-                        <div class="row">
-                          <span ng-if="r[0].rating == 5" class="pull-right">
-                              <i class="fa fa fa-smile-o fa-lg" style="color:#086b0a" aria-hidden="true"></i>
-                              <i class="fa fa-star fa-lg" style="color:#086b0a" aria-hidden="true"></i>
-                             </span>
-                          <span ng-if="r[0].rating == 4" class="pull-right">
-                               <i class="fa fa fa-smile-o fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
-                              <i class="fa fa-star fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
-                             </span>
-                          <span ng-if="r[0].rating == 3" class="pull-right">
-                               <i class="fa fa-meh-o fa-lg" style="color:#dff20c" aria-hidden="true"></i>
-                               <i class="fa fa-star fa-lg" style="color:#dff20c" aria-hidden="true"></i>
-                              </span>
-                          <span ng-if="r[0].rating == 2||data[0].rating == 1" class="pull-right">
-                               <i class="fa fa fa-frown-o fa-lg" style="color:#f70202" aria-hidden="true"></i>
-                               <i class="fa fa-star fa-lg" style="color:#f70202" aria-hidden="true"></i>
+                            <div class="col-md-4">
+                              <div class="row">
+                                <span ng-if="r[0].rating == 5" class="pull-right">
+                                    <i class="fa fa fa-smile-o fa-lg" style="color:#086b0a" aria-hidden="true"></i>
+                                    <i class="fa fa-star fa-lg" style="color:#086b0a" aria-hidden="true"></i>
+                                   </span>
+                                <span ng-if="r[0].rating == 4" class="pull-right">
+                                     <i class="fa fa fa-smile-o fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
+                                    <i class="fa fa-star fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
+                                   </span>
+                                <span ng-if="r[0].rating == 3" class="pull-right">
+                                     <i class="fa fa-meh-o fa-lg" style="color:#dff20c" aria-hidden="true"></i>
+                                     <i class="fa fa-star fa-lg" style="color:#dff20c" aria-hidden="true"></i>
+                                    </span>
+                                <span ng-if="r[0].rating == 2||data[0].rating == 1" class="pull-right">
+                                     <i class="fa fa fa-frown-o fa-lg" style="color:#f70202" aria-hidden="true"></i>
+                                     <i class="fa fa-star fa-lg" style="color:#f70202" aria-hidden="true"></i>
+                                 </span>
+                              </div>
+                              <div class="row" style="padding-top:15px;" >
+                                <span class="pull-right" style="color:#286090 ;font-size:15px">{{r[0].numOfComments}} <i class="fa fa-comments-o fa-lg" aria-hidden="true"></i></span>
+                              </div>
+                            </div>
+                          </div>
+
+                      </div>
+                      <div class="btn btn-block btn-primary" style="border-top:1px solid #eee; padding:10px; border-radius:0px 0px 4px 4px;" ng-click="tableAction($index)">
+                        View Chat
+                      </div>
+                  </div>
+                </div>
+
+                <div class="col-md-12" ng-if="isTableView&&tableUpdated">
+                    <table style="width:100%;font-size:16px" id="myQATable" datatable="" dt-options="dtOptions" dt-column-defs="dtColumnDefs" class="row-border hover">
+                      <thead>
+                        <tr id="">
+                          <th style="text-align:center;display:none">Chat Start</th>
+                        </tr>
+                      </thead>
+                     <tbody>
+                       <tr ng-repeat="data in reviewData" style="" ng-click="tableAction(data,true)">
+                         <td>
+                             <div class="" style="border-radius:50%;width:50px;height:50px;margin:5px 10px;float:left">
+                               <img ng-if="data[0].user_id" style="width:50px" src="{{data[0].user_id | getDP}}" alt="">
+                               <img ng-if="!data[0].user_id" style="width:50px" src="http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/256/Administrator-icon.png" alt="">
+                             </div>
+                           <span style="display:inline-block">
+                             <div class="">
+                               <span style="font-size: 15px;font-weight: 700;">{{data[0].user_id | getName}}</span>
+                               <span style="font-size: 13px;font-weight: 400;">{{data[0].company? data[0].company:'-'}}</span>
+                             </div>
+                             <div class="">
+                               <span style="font-size: 14px;">{{data[0].uid}}</span>
+                             </div>
+                             <div class="">
+                               <span style="font-size: 13px;opacity: 0.8;">Created : {{data[0].created|  date : 'dd-MMM-yyyy'}}</span>
+                             </div>
+
                            </span>
-                        </div>
-                        <div class="row" style="padding-top:15px;" >
-                          <span class="pull-right" style="color:#286090 ;font-size:15px">{{r[0].numOfComments}} <i class="fa fa-comments-o fa-lg" aria-hidden="true"></i></span>
-                        </div>
+                           <div class="" style="margin:5px 10px;float:right;font-size:20px;padding:12px;opacity:0.6;">
+                            <!-- <i ng-if="data[0].typ==''" class="fa fa-table fa-lg"  aria-hidden="true"></i> -->
+                            <i ng-if="data[0].typ=='audio'" class="fa fa-phone fa-lg" aria-hidden="true"></i>
+                            <i ng-if="data[0].typ=='video'" class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
+                          </div>
+                         </td>
+                       </tr>
+                     </tbody>
+                    </table>
+                </div>
+
+                <div class="" style="position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
+                  No More Data
+                </div>
+
+              </div>
+              <div class="col-sm-3" >
+                <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;width:20%;height:100vh;padding:20px 10px;box-shadow:-1px -1px 1px #f6f6f6">
+                  <div style="display:block;margin:10px 0px;">
+                    <button type="button" class="btn btn-block btn-primary" ng-click="setMyView()" style="outline:none">
+                       <i ng-if="!isTableView"class="fa fa-table fa-md"  aria-hidden="true">
+                         <span>Switch to Table View</span>
+                       </i>
+                       <i ng-if="isTableView" class="fa fa-address-card-o fa-md" aria-hidden="true">
+                         <span>Switch to Column View</span>
+                       </i>
+                    </button>
+                  </div>
+                    <div class="form-group">
+                      <label><b> Select Date </b></label>
+                      <div class="input-group">
+                        <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
+                        <span class="input-group-btn">
+                          <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="fa fa-calendar"></i></button>
+                        </span>
                       </div>
-                      <!-- <div class="col-md-12">
-                        <h6>Date : {{r[0].created | date : "dd-MMM-yyyy"}}</h6>
-                      </div>
-                      <div class="col-md-12">
-                        <h6 ng-if="r[0].email">Visitor's Email : {{r[0].email}}</h6>
-                      </div>
-                      <div class="col-md-12">
-                        <h6 ng-if="r[0].chatDuration!=0">Chat Duration : {{r[0].chatDuration}}</h6>
-                      </div> -->
                     </div>
+                    <div class="form-group">
+                      <label><b> Visitor Email </b></label>
+                      <input type="email" class="form-control" placeholder="User E-mail..." ng-model="form.email">
+                    </div>
+                    <div class="form-group">
+                        <label for="sel1">Select Chat Type (Audio/Video):</label>
+                        <select class="form-control" id="sel1" ng-model="form.selectedChatType" style="outline:none">
+                          <option ng-repeat="chatType in chatTypes" value="{{chatType}}">{{chatType}}</option>
+                        </select>
+                    </div>
+                    <div class="btn-group-vertical">
+                      <button type="button" class="btn btn-primary" ng-click="filterData()">
+                        <strong>Filter</strong>
+                      </button>
+                   </div>
+                   <div class="form-group" style="margin-top:20px">
+                    <label>Sort By:</label>
+                    <select class="form-control" ng-model="selectedSortOption.value">
+                      <option ng-repeat="sort in sortOptions" value="{{sort}}">{{sort}} </option>
+                    </select>
+                  </div>
+                </div>
+              </div>
 
-                </div>
-                <div class="btn btn-block btn-primary" style="border-top:1px solid #eee; padding:10px; border-radius:0px 0px 4px 4px;" ng-click="tableAction($index)">
-                  View Chat
-                </div>
             </div>
+          <!-- </div> -->
+        </uib-tab>
+
+        <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
+          <uib-tab-heading>
+            {{tab.title}}
+            <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
+          </uib-tab-heading>
+          <div ng-if="tab.app == 'ChatInfo'">
+            <div ng-include="'/static/ngTemplates/app.reviews.explore.html'"></div>
           </div>
+        </uib-tab>
+      </uib-tabset>
+    </div>
 
-          <div class="col-md-12" ng-if="isTableView&&reviewData.length>0">
-              <table style="width:100%;font-size:16px" id="myQATable" datatable="" dt-options="dtOptions" dt-column-defs="dtColumnDefs" class="row-border hover">
-                <thead>
-                  <tr id="myQATableHeader">
-                    <th style="text-align:center">Chat Start</th>
-                    <th style="text-align:center">Company</th>
-                    <th>Advisor</th>
-                    <th>UID/Visitor Name</th>
-                    <th>Rating</th>
-                    <th>Status</th>
-                  </tr>
-                </thead>
-               <tbody>
-                 <tr ng-repeat="data in reviewData" style="text-align:center" ng-click="tableAction(data,true)">
-                   <td>{{data[0].created | date : 'dd-MMM-yyyy'}}</td>
-                   <td>{{data[0].company? data[0].company:'-'}}</td>
-                   <td>{{data[0].user_id | getName}}</td>
-                   <td>{{data[0].uid}}</td>
-                   <td>{{data[0].rating? data[0].rating:'-'}}</td>
-                   <td ng-if="data[0].statusChat=='closed'" style="background-color:rgba(255, 0, 0,0.7)">{{data[0].statusChat}}</td>
-                   <td ng-if="data[0].statusChat=='started'" style="background-color:green">{{data[0].statusChat}}</td>
-                   <td ng-if="data[0].statusChat!='started'&&data[0].statusChat!='closed'">{{data[0].statusChat? data[0].statusChat:'-'}}</td>
-                   <!-- <td ng-if="data[0].statusChat=='started'" style="background-color:green">{{data[0].statusChat}}</td> -->
-                   <!-- <td style="background-color:red">{{data[0].statusChat}}</td>
-                   <td style="background-color:red">{{data[0].statusChat}}</td> -->
-                 </tr>
-               </tbody>
-              </table>
-          </div>
-
-          <div class="" style="position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
-            No More Data
-          </div>
-
-        </div>
-      <!-- </div> -->
-    </uib-tab>
-
-    <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
-      <uib-tab-heading>
-        {{tab.title}}
-        <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
-      </uib-tab-heading>
-      <div ng-if="tab.app == 'ChatInfo'">
-        <div ng-include="'/static/ngTemplates/app.reviews.explore.html'"></div>
-      </div>
-    </uib-tab>
-  </uib-tabset>
-
+  </div>
 
 </div>
