--- a/support/static/ngTemplates/app.sessionHistory.explore.html
+++ b/support/static/ngTemplates/app.sessionHistory.explore.html
@@ -115,7 +115,7 @@
     </div>
 
     <div class="col-sm-3">
-      <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;padding:20px 30px;box-shadow:-1px -1px 1px #f6f6f6;height:100vh">
+      <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;width:20%;padding:20px 30px;box-shadow:-1px -1px 1px #f6f6f6;height:100vh">
         <h4 style="display:inline-block">Agent Info:</h4>
         <span class="pull-right btn btn-primary" ng-click="showChart()" style="font-size:15px">Change Status</span>
         <div style="margin:15px 0px">
